# Templates

./: .gitignore
halogen/: .gitignore  devenv.nix  package-lock.json  package.json  spago.yaml
halogen/public/: index.html
halogen/src/: Main.purs
haskell/: .ghci  .gitignore  devenv.local.nix  devenv.nix  example.cabal
haskell/src/: Greeting.hs  Main.hs
haskell/test/: Main.hs
haskell/test/Test/: Greeting.hs  Main.hs
javascript/: .gitignore  devenv.local.nix  devenv.nix  devenv.yaml
javascript/backend/: devenv.nix  eslint.config.mjs  package-lock.json  package.json
javascript/frontend/: devenv.nix  eslint.config.mjs  karma.conf.js  package-lock.json  package.json  webpack.config.js
lamp/: .env  .gitignore  apache.nix  devenv.local.nix  devenv.nix  devenv.yaml  schema.sql
lamp/public/: .htaccess  db.php  index.html  index.php
php/: .env  .gitignore  composer.json  deploy.php  devenv.local.nix  devenv.nix  devenv.yaml
php/public/: db.php  index.html  index.php
php/tests/: AppTest.php
purescript/: .gitignore  devenv.local.nix  devenv.nix  devenv.yaml  package.json  spago-test.dhall  spago.yaml
purescript/public/: index.html
purescript/src/: Main.purs
servant/: .envrc  .gitignore  devenv.local.nix  devenv.nix
static/: .envrc  .gitignore  devenv.local.nix  devenv.nix
symfony/: .env  .gitignore  devenv.local.nix  devenv.nix  devenv.yaml
typescript/: .gitignore  devenv.local.nix  devenv.nix  devenv.yaml  eslint.config.mjs  package-lock.json  package.json  tsconfig.json
wordpress/: .env  devenv.local.nix  devenv.nix
(+34 files in other folders)
