cabal-version:      3.0
name:               example
version:            0.1.0
build-type:         Simple

common warnings
    ghc-options: -Wall

executable example
    import:           warnings
    main-is:          Main.hs
    build-depends:    base ^>=4.20.2.0
    hs-source-dirs:   app
    default-language: Haskell2010

test-suite example-test
    import:           warnings
    type:             exitcode-stdio-1.0
    main-is:          Spec.hs
    build-depends:    base ^>=4.20.2.0
    hs-source-dirs:   test
    default-language: Haskell2010
